k8s/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: shopmicro
spec:
  selector: { app: backend }
  ports:
  - port: 8080
    targetPort: 8080
